# rover

./: Cargo.toml  README.md  example_cbez333.off
example_files/: triangulated_sphere.off
src/: bezier.rs  builder.rs  main.rs  math.rs  subdivision.rs  triangle.rs  util.rs
src/bevy_fly_camera/: cam2d.rs  lib.rs  mod.rs
src/bezier/: curve.rs  mod.rs  rectangle.rs  triangle.rs
